# git-notes-db

./: .envrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.basedpyright/: baseline.json
.claude/: settings.local.json
scripts/: cz-pre-bump.sh
src/git_notes_db/: git.py
src/git_notes_db/dev/: commit.py
typings/: jq.pyi
